cabal-version:      2.4
name:               avl-tree
version:            0.1.0.0
author:             pseud0n
maintainer:         pseud0n@users.noreply.github.com
extra-source-files: CHANGELOG.md

executable avl-tree
    main-is:          Main.hs
    other-modules:    AVLTree
    build-depends:    base ^>=4.14.3.0, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
